Save work before deleting branch

--- a/data/index.html
+++ b/data/index.html
@@ -1,77 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="vi">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="description" content="Thiệp chúc Tết số 2026 - 9A4" />
+        <title>THIỆP CHÚC XUÂN 9A4 2026</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/style" />
+    </head>
 
-<head>
-   <meta charset="utf-8" />
-   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-   <meta name="description" content="Thiệp chúc Tết số 2026 - 9A4" />
-   <title>THIỆP CHÚC XUÂN 9A4 2026</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="/style" />
-   <meta name="theme-color" content="#c1121f">
-</head>
+    <body>
+        <audio id="soundBg" src="sounds/soundBg.mp3" preload="auto" loop></audio>
+        <audio id="soundOpen" src="sounds/open.mp3" preload="auto"></audio>
+        <audio id="soundFirework" src="sounds/fireworks.mp3" preload="auto"></audio>
+        <audio id="soundVoice" src="sounds/voice.wav" preload="auto" playsinline></audio>
+        <div class="particles">
+            <span></span><span></span><span></span><span></span><span></span> <span></span><span></span><span></span
+            ><span></span><span></span> <span></span><span></span><span></span><span></span><span></span><span></span
+            ><span></span><span></span><span></span><span></span> <span></span><span></span><span></span><span></span
+            ><span></span> <span></span><span></span><span></span><span></span><span></span> <span></span><span></span
+            ><span></span><span></span><span></span> <span></span><span></span><span></span><span></span><span></span>
+        </div>
+        <div class="scene">
+            <div class="sach">
+                <div class="trang trangdau" id="bia">
+                    <button class="btn-mo-thiep" onclick="latBia()">🧧</button>
+                </div>
+                <div class="trang trang2" id="trangTrong">
+                    <!--Trái trên-->
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-trai-tren" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-trai-tren" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-trai-tren" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-trai-tren" />
+                    <!--Phải trên-->
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-phai-tren" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-phai-tren" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-phai-tren" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-phai-tren" />
+                    <!--Trái dưới-->
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-trai-duoi" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-trai-duoi" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-trai-duoi" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-trai-duoi" />
+                    <!--Phải dưới-->
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-phai-duoi" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-phai-duoi" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-phai-duoi" />
+                    <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-phai-duoi" />
 
-<body>
-   <audio id="soundBg" src="sounds/soundBg.mp3" loop></audio>
-   <audio id="soundOpen" src="sounds/open.mp3"></audio>
-   <audio id="soundFirework" src="sounds/fireworks.mp3"></audio>
-   <audio id="soundVoice" src="sounds/voice.wav"></audio>
-   <div class="particles">
-      <span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span>
-   </div>
-   <div class="scene">
-      <div class="sach">
-         <div class="trang trangdau" id="bia">
-            <button class="btn-mo-thiep" onclick="latBia()">🧧</button>
-         </div>
-         <div class="trang trang2" id="trangTrong">
-            <!--Trái trên-->
-            <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-trai-tren" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-trai-tren" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-trai-tren" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-trai-tren" />
-            <!--Phải trên-->
-            <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-phai-tren" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-phai-tren" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-phai-tren" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-phai-tren" />
-            <!--Trái dưới-->
-            <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-trai-duoi" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-trai-duoi" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-trai-duoi" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-trai-duoi" />
-            <!--Phải dưới-->
-            <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-phai-duoi" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-phai-duoi" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu3-goc-phai-duoi" />
-            <img src="images/xu.png" alt="xu" class="dong-xu xu4-goc-phai-duoi" />
-
-            <div class="trai" id="trai">
-               <h2 id="tieuDeTrai"></h2>
-               <p id="noiDungTrai"></p>
+                    <div class="trai" id="trai">
+                        <h2 id="tieuDeTrai"></h2>
+                        <p id="noiDungTrai"></p>
+                    </div>
+                    <div class="phai">
+                        <p id="noiDungPhai"></p>
+                        <img src="images/ehhh.png" alt="decoration">
+                    </div>
+                    <div class="fireworks"></div>
+                    <button class="btn-dong" onclick="dongBia()">✖</button>
+                </div>
             </div>
-            <div class="phai">
-               <p id="noiDungPhai"></p>
-            </div>
-            <div class="fireworks"></div>
-            <button class="btn-dong" onclick="dongBia()">✖</button>
-         </div>
-      </div>
-   </div>
-   <div class="class-photo1">
-      <img src="images/class1.jpg" alt="Ảnh lớp 9A4 1">
-   </div>
-   <div class="tenlop">
-      <h2>LỚP 9A4</h2>
-   </div>
+        </div>
+        <div class="class-photo1">
+            <img src="images/class1.jpg" alt="Ảnh lớp 9A4 1" />
+        </div>
+        <div class="tenlop">
+            <h2>LỚP 9A4</h2>
+        </div>
 
-   <script src="/index"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c5931449d3e697e',t:'MTc2OTY5NDU2Mg=='};var a=document.createElement('script');a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
-
+        <script src="/index"></script>
+    </body>
 </html>
