--- a/data/index.html
+++ b/data/index.html
@@ -27,6 +27,8 @@
                     <button class="btn-mo-thiep" onclick="latBia()">🧧</button>
                 </div>
                 <div class="trang trang2" id="trangTrong">
+                    <img src="images/class1.jpg" alt="Ảnh lớp" id="anh-lop"/>
+                    <img src="images/corner-dao.png" id="dao" />
                     <!--Trái trên-->
                     <img src="images/xu.png" alt="xu" class="dong-xu xu1-goc-trai-tren" />
                     <img src="images/xu.png" alt="xu" class="dong-xu xu2-goc-trai-tren" />
@@ -60,9 +62,6 @@
                     <button class="btn-dong" onclick="dongBia()">✖</button>
                 </div>
             </div>
-        </div>
-        <div class="class-photo1">
-            <img src="images/class1.jpg" alt="Ảnh lớp 9A4 1" />
         </div>
         <div class="tenlop">
             <h2>LỚP 9A4</h2>
